work in progress

--- a/automation/Dockerfile
+++ b/automation/Dockerfile
@@ -7,10 +7,10 @@ RUN apk update && apk add \
 
 # temp credentials (outside AWS IAM Role)
 ENV AWS_REGION=eu-west-1
-ENV AWS_ACCESS_KEY_ID=
-ENV AWS_SECRET_ACCESS_KEY=
-ENV AWS_SESSION_TOKEN=
-ENV AWS_SECURITY_TOKEN=
+#ENV AWS_ACCESS_KEY_ID=
+#ENV AWS_SECRET_ACCESS_KEY=
+#ENV AWS_SESSION_TOKEN=
+#ENV AWS_SECURITY_TOKEN=
 
 WORKDIR /app
 
