--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: 'Checkout'
         uses: actions/checkout@master
 
-      - name: Assume Role
+      - name: AWS IAM Assume Role
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -49,6 +49,7 @@ jobs:
           tf_actions_comment: false
 
       - name: 'Terraform Plan'
+        id: plan
         uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: ${{ env.tf_version }}
@@ -56,3 +57,13 @@ jobs:
           tf_actions_working_dir: ${{ env.tf_working_dir }}
           tf_actions_comment: false
           args: '-var="env=dev" -var="artifacts_bucket=${{ env.artifacts_bucket }}"'
+
+      - name: 'Terraform Apply'
+        if: steps.plan.outputs.tf_actions_plan_has_changes == 'true'
+        uses: hashicorp/terraform-github-actions@master
+        with:
+          tf_actions_version: ${{ env.tf_version }}
+          tf_actions_subcommand: 'apply'
+          tf_actions_working_dir: ${{ env.tf_working_dir }}
+          tf_actions_comment: false
+          args: '-var="env=dev"'
