--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,23 @@ jobs:
       - name: Update runbook artifact
         run: aws s3 cp ./automation/runbook.sh 's3://${{ env.project }}-artifacts/'
 
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build, tag, and push image to Amazon ECR
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: mamip-ecr-dev
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          docker build -t mamip-image ./automation/
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+      - name: Logout of Amazon ECR
+        if: always()
+        run: docker logout ${{ steps.login-ecr.outputs.registry }}
+
       - name: 'Terraform Init'
         uses: hashicorp/terraform-github-actions@master
         with:
