prepare dev env

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,9 +1,9 @@
-name: '[Prod] MAMIP - GitHub Actions'
+name: '[Dev] MAMIP - GitHub Actions'
 
 on:
   push:
     branches:
-    - master
+    - dev
 
 env:
   tf_version: 'latest'
