--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ on:
     - master
 
 env:
-  tf_version: 'latest'
+  tf_version: '0.13.5'
   tf_working_dir: './automation/tf-fargate'
-  env: 'dev'
+  env: 'prod'
   project: 'mamip'
   aws_region: 'eu-west-1'
   artifacts_bucket: 'mamip-artifacts'
@@ -41,7 +41,7 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: mamip-ecr-dev
+          ECR_REPOSITORY: mamip-ecr-prod
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build -t mamip-image ./automation/
@@ -77,7 +77,7 @@ jobs:
           tf_actions_subcommand: 'plan'
           tf_actions_working_dir: ${{ env.tf_working_dir }}
           tf_actions_comment: false
-          args: '-var="env=dev" -var="artifacts_bucket=${{ env.artifacts_bucket }}"'
+          args: '-var="env=prod" -var="artifacts_bucket=${{ env.artifacts_bucket }}"'
 
       - name: 'Terraform Apply'
         if: steps.plan.outputs.tf_actions_plan_has_changes == 'true'
@@ -87,4 +87,4 @@ jobs:
           tf_actions_subcommand: 'apply'
           tf_actions_working_dir: ${{ env.tf_working_dir }}
           tf_actions_comment: false
-          args: '-var="env=dev"'
+          args: '-var="env=prod"'
