better org terraform first

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   terraform:
-    name: 'Terraform'
+    name: 'Build & Deploy'
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout'
@@ -30,27 +30,6 @@ jobs:
           role-to-assume: ${{ secrets.ROLE_TO_ASSUME }}
           role-duration-seconds: 1200
           role-session-name: GH-Actions-${{ env.project }}
-
-      - name: Update runbook artifact
-        run: aws s3 cp ./automation/runbook.sh 's3://${{ env.project }}-artifacts/'
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Build, tag, and push image to Amazon ECR
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: mamip-ecr-${{ env.env }}
-          IMAGE_TAG: ${{ github.sha }}
-        run: |
-          docker build -t mamip-image ./automation/
-          docker tag mamip-image $ECR_REGISTRY/$ECR_REPOSITORY
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY
-
-      - name: Logout of Amazon ECR
-        if: always()
-        run: docker logout ${{ steps.login-ecr.outputs.registry }}
 
       - name: 'Terraform Init'
         uses: hashicorp/terraform-github-actions@master
@@ -88,3 +67,24 @@ jobs:
           tf_actions_working_dir: ${{ env.tf_working_dir }}
           tf_actions_comment: false
           args: '-var="env=${{ env.env }}"'
+
+      - name: Update runbook artifact
+        run: aws s3 cp ./automation/runbook.sh 's3://${{ env.project }}-artifacts/'
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build, tag, and push image to Amazon ECR
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: mamip-ecr-${{ env.env }}
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          docker build -t mamip-image ./automation/
+          docker tag mamip-image $ECR_REGISTRY/$ECR_REPOSITORY
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY
+
+      - name: Logout of Amazon ECR
+        if: always()
+        run: docker logout ${{ steps.login-ecr.outputs.registry }}
