update release to see whats changed.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - id: file_changes
+        uses: trilom/file-changes-action@v1.2.3
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -22,5 +24,9 @@ jobs:
           release_name: Release ${{ github.ref }}
           body: |
             Update detected on ${{ github.ref }}
+            Files changed: '${{ steps.file_changes.outputs.files}}
+            Modified: ${{ steps.file_changes.outputs.files_modified}}
+            Added: ${{ steps.file_changes.outputs.files_added}}
+            Removed: ${{ steps.file_changes.outputs.files_removed}}
           draft: false
           prerelease: false
