--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -69,7 +69,7 @@ jobs:
           args: '-var="env=${{ env.env }}"'
 
       - name: Update runbook artifact
-        run: aws s3 cp ./automation/runbook.sh 's3://${{ env.project }}-artifacts/'
+        run: aws s3 cp ./automation/runbook-${{ env.env }}.sh 's3://${{ env.project }}-artifacts/${{ env.env }}/runbook.sh'
 
       - name: Login to Amazon ECR
         id: login-ecr
