prepare validation automation

--- a/automation/Dockerfile
+++ b/automation/Dockerfile
@@ -10,6 +10,9 @@ ENV AWS_REGION=eu-west-1
 
 WORKDIR /app
 
+COPY requirements.txt /app/
+RUN python3 -m pip install -r /app/requirements.txt
+COPY validate.py /app/
 COPY script-fargate.sh /app/script.sh
 RUN chmod +x /app/script.sh
 
