--- a/.github/workflows/policy_validation.yml
+++ b/.github/workflows/policy_validation.yml
@@ -3,7 +3,7 @@ on:
     branches:
     - dev
 
-name: Policy Validation
+name: AAA - Policy Validation
 
 jobs:
   build:
@@ -39,17 +39,17 @@ jobs:
       - name: Install python requirements
         run: python3 -m pip install -r ./automation/requirements.txt
 
-      - name: Policy Validation
+      - name: AWS Access Analyzer - Policy Validation
         run: python3 ./automation/validate-batch.py
 
-      - name: Commit files
+      - name: Commit findings
         run: |
           git config --local user.email "mamip@noreply"
           git config --local user.name "mamip-github-actions[bot]"
           git add ./findings
           git commit -m "Add AWS Access Analyzer findings"
 
-      - name: Push changes
+      - name: Push findings
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
