fix release bug

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - id: files
-        uses: jitterbit/get-changed-files@v1
+      # - id: files
+      #   uses: jitterbit/get-changed-files@v1
 
       - name: Create Release
         id: create_release
@@ -26,8 +26,8 @@ jobs:
           release_name: Release ${{ github.ref }}
           body: |
             Update detected on ${{ github.ref }}
-            Added: ${{ steps.files.outputs.added }}
-            Modified: ${{ steps.files.outputs.modified }}
-            Removed: ${{ steps.files.outputs.removed }}
+          # Added: ${{ steps.files.outputs.added }}
+          # Modified: ${{ steps.files.outputs.modified }}
+          # Removed: ${{ steps.files.outputs.removed }}
           draft: false
           prerelease: false
