--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -91,3 +91,10 @@ jobs:
       - name: Logout of Amazon ECR
         if: always()
         run: docker logout ${{ steps.login-ecr.outputs.registry }}
+
+      - name: pull-request
+        uses: repo-sync/pull-request@v2
+        with:
+          pr_reviewer: "z0ph"
+          pr_assignee: "z0ph"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
