--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -102,7 +102,7 @@ jobs:
       - name: Get changed files
         id: getfile
         run: |
-          export is_the_first_deployment=false
+          export is_the_first_deployment=0
           if [[ is_the_first_deployment ]]; then
               export DIFF=$( git diff --name-only origin/master ${{ github.sha }} )
               echo "Diff between origin/master and ${{ github.sha }} "
@@ -112,3 +112,4 @@ jobs:
           fi
 
           echo "::set-output name=files::$( echo "$DIFF" | sed ':a;N;$!ba;s/\n/%0A/g' )"
+          echo "$DIFF"
