--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -102,14 +102,11 @@ jobs:
       - name: Get changed files
         id: getfile
         run: |
-          export is_the_first_deployment=0
-          if [[ is_the_first_deployment ]]; then
-              export DIFF=$( git diff --name-only origin/master ${{ github.sha }} )
-              echo "Diff between origin/master and ${{ github.sha }} "
-          else
-              export DIFF=$( git diff --name-only ${{ github.event.before }} ${{ github.sha }} )
-              echo "Diff between ${{ github.event.before }} and ${{ github.sha }} "
-          fi
+            export DIFF=$( git diff --name-only origin/master ${{ github.sha }} )
+            echo "Diff between origin/master and ${{ github.sha }} "
+            export DIFF2=$( git diff --name-only ${{ github.event.before }} ${{ github.sha }} )
+            echo "Diff2 between ${{ github.event.before }} and ${{ github.sha }} "
 
           echo "::set-output name=files::$( echo "$DIFF" | sed ':a;N;$!ba;s/\n/%0A/g' )"
           echo "$DIFF"
+          echo "$DIFF2"
