--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,3 +31,15 @@ jobs:
           # Removed: ${{ steps.files.outputs.removed }}
           draft: false
           prerelease: false
+
+      - name: Get changed files
+        id: getfile
+        run: |
+            export DIFF=$( git diff --name-only origin/master ${{ github.sha }} )
+            echo "Diff between origin/master and ${{ github.sha }} "
+            export DIFF2=$( git diff --name-only ${{ github.event.before }} ${{ github.sha }} )
+            echo "Diff2 between ${{ github.event.before }} and ${{ github.sha }} "
+            echo "--DIFF1:"
+            echo "$DIFF"
+            echo "--DIFF2:"
+            echo "$DIFF2"
