--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Get changed files
         id: getfile
         run: |
-            export DIFF=$( git diff --name-only origin/master ${{ github.sha }} )
-            echo "Diff between origin/master and ${{ github.sha }} "
+            export DIFF=$( git diff --name-only ${{ github.ref }} ${{ github.sha }} )
+            echo "Diff between ${{ github.ref }} and ${{ github.sha }} "
             export DIFF2=$( git diff --name-only ${{ github.event.before }} ${{ github.sha }} )
             echo "Diff2 between ${{ github.event.before }} and ${{ github.sha }} "
             echo "--DIFF1:"
