--- a/.github/workflows/policy_validation.yml
+++ b/.github/workflows/policy_validation.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Install python requirements
         run: python3 -m pip install -r ./automation/requirements.txt
 
+      - name: Retrieve the list of current AWS Managed Policies
+        run: aws iam list-policies --scope AWS > policies-list.json
+
       - name: AWS Access Analyzer - Policy Validation
         run: python3 ./automation/validate-batch.py
 
@@ -48,7 +51,9 @@ jobs:
           git config --local user.email "mamip@noreply"
           git config --local user.name "mamip-github-actions[bot]"
           git add ./findings
-          git commit -m "Add AWS Access Analyzer findings" || :
+          git add DEPRECATED.json
+          git add policies-list.json
+          git commit -m "Add AA findings + current and deprecated policy lists" || :
 
       - name: Push findings
         uses: ad-m/github-push-action@master
