fix policy validation

--- a/.github/workflows/policy_validation.yml
+++ b/.github/workflows/policy_validation.yml
@@ -4,12 +4,17 @@ on:
       - '202*'
   workflow_dispatch:
 
-
 name: AAA - Policy Validation
+
+env:
+  project: 'mamip'
 
 jobs:
   build:
     name: AWS Access Analyzer - Policy Validation
+    permissions:
+      id-token: write
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -18,14 +23,12 @@ jobs:
           persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
           fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
       - name: AWS IAM Assume Role
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@master
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.REGION }}
           role-to-assume: ${{ secrets.ROLE_TO_ASSUME }}
           role-duration-seconds: 1200
-          role-session-name: GH-Actions-${{ env.project }}
+          role-session-name: GH-Actions-${{ env.project }}-policy-validation
       
       - name: Who Am I?
         run: aws sts get-caller-identity
